Fixed footer on mobile.

--- a/style.css
+++ b/style.css
@@ -257,4 +257,9 @@ h1 {
   #display {
     width: 85vw;
   }
+
+  #footer {
+    display: flex;
+    flex-direction: column;
+  }
 }
